--- a/Acceuil.html
+++ b/Acceuil.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -118,23 +119,23 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <h1>stylish  <br>men’s design
                     </h1>
                     <p></p>
-                    <a href="#" class="shop-now-btn">SHOP NOW</a>
+                    <a href="Men's.html" class="shop-now-btn">SHOP NOW</a>
                 </div>
                 <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 1" width="500">
             </div>
             <div class="slide">
                 <div class="hero-content">
-                    <h1>New Kid's<br>Collection</h1>
+                    <h1>Kid's<br>Collections</h1>
                     <p>Special Offers & Discounts</p>
-                    <a href="#" class="shop-now-btn">DISCOVER NOW</a>
+                    <a href="kids.html" class="shop-now-btn">DISCOVER NOW</a>
                 </div>
                 <img src="assets/images/kids (2).png" alt="Fashion Model 2">
             </div>
             <div class="slide">
                 <div class="hero-content">
-                    <h1>Premium<br>Fabric</h1>
+                    <h1>Women<br>collections</h1>
                     <p>Best Deals of the Season</p>
-                    <a href="#" class="shop-now-btn">EXPLORE NOW</a>
+                    <a href="women.html" class="shop-now-btn">EXPLORE NOW</a>
                 </div>
                 <img src="assets/images/IMG_0340_1_-removebg-preview.png" alt="Fashion Model 3" width="360">
             </div>
@@ -206,7 +207,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <p class="modal-description" id="modal-description"></p>
                 <p class="modal-price" id="modal-price"></p>
                 <div class="modal-actions">
-                    <button id="modal-add-to-cart" class="add-to-cart">Ajouter au panier</button>
+                    <button id="modal-add-to-cart" class="add-to-cart"> add to cart</button>
                 </div>
             </div>
         </div>
@@ -257,8 +258,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-background" style="background-image: url('assets/images/banner\ \(1\).png')"></div>
         <div class="carrousel-overlay"></div>
         <div class="carrousel-content">
-            <h1 class="carrousel-title">Profitez de nos reductions</h1>
-            <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
+            <h1 class="carrousel-title">Take advantage of our offers and discounts</h1>
+            <p class="carrousel-subtitle">Unique products at unbeatable prices.</p>
             <a href="" class="btn">Explore</a>
         </div>
     </div>
@@ -267,8 +268,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-background" style="background-image: url('assets/images/banner\ \(2\).png')"></div>
         <div class="carrousel-overlay"></div>
         <div class="carrousel-content">
-            <h1 class="carrousel-title">Profitez de nos reductions</h1>
-            <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
+             <h1 class="carrousel-title">Take advantage of our offers and discounts</h1>
+            <p class="carrousel-subtitle">Unique products at unbeatable prices.</p>
             <a href="" class="btn">Explore</a>
         </div>
     </div>
@@ -277,8 +278,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-background" style="background-image: url('assets/images/banner\ \(3\).png')"></div>
         <div class="carrousel-overlay"></div>
         <div class="carrousel-content">
-            <h1 class="carrousel-title">Profitez de nos offres</h1>
-            <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
+            <h1 class="carrousel-title">Take advantage of our offers and discounts</h1>
+            <p class="carrousel-subtitle">Unique products at unbeatable prices.</p>
             <a href="" class="btn">Explore</a>
         </div>
     </div>
