--- a/Men's.html
+++ b/Men's.html
@@ -200,21 +200,21 @@
                 <div class="product-name">product name 1</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart"> Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
                 <div class="product-name">product name 2</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart"> Details </button>
             </div>
             <div class="products-card">
                 <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart">Details</button>
             </div>
         </div>
     </div>
@@ -227,20 +227,20 @@
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
                 <div class="product-name">product name</div>
                 <div class="product-price">89.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
+                <button class="add-to-cart">Details</button>
             </div>
         </div>
     </div>
@@ -255,21 +255,21 @@
             <div class="product-name">product name</div>
             <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">39.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
+           <button class="add-to-cart">Details</button>
         </div>
         <div class="products-card">
             <img src="assets/images/malepage (2).PNG" alt="Produit  2" class="products-image">
             <div class="product-name">product name</div>
             <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">49.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
+            <button class="add-to-cart">Details</button>
         </div>
         <div class="products-card">
             <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
             <div class="product-name">product name</div>
             <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">79.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
+            <button class="add-to-cart">Details</button>
         </div>
     </div>
 </div>
