--- a/women.html
+++ b/women.html
@@ -210,19 +210,21 @@
                     <div class="product-name">product name 21</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">159.99€</div>
+                    <button class="add-to-cart">Details</button>
                 </div>
                 <div class="products-card">
                     <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
                     <div class="product-name">product name 22</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">89.99€</div>
+                    <button class="add-to-cart">Details</button>
                 </div>
                 <div class="products-card">
                     <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
                     <div class="product-name">product name 44</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">34.99€</div>
-
+                    <button class="add-to-cart">Details</button>
                 </div>
             </div>
         </div>
@@ -235,12 +237,14 @@
                     <div class="product-name">product name</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">159.99€</div>
+                    <button class="add-to-cart">Details</button>
                 </div>
                 <div class="products-card">
                     <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
                     <div class="product-name">product name</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">89.99€</div>
+                    <button class="add-to-cart">Details</button>
 
                 </div>
                 <div class="products-card">
@@ -248,6 +252,7 @@
                     <div class="product-name">product name</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">34.99€</div>
+                    <button class="add-to-cart">Details</button>
                     
                 </div>
             </div>
@@ -263,18 +268,21 @@
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">39.99€</div>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/MB-Crea-pic (28).jpg" alt="Produit  2" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">49.99€</div>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/about2.jpg" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">79.99€</div>
+                <button class="add-to-cart">Details</button> 
             </div>
         </div>
     </div>
