changement de langue dans les fichier js  passage de francais en anglais

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -98,8 +98,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             </ul>
         </nav>
         <div class="header-icons">
-            <i class="fas fa-search"></i>
-            <i class="fas fa-heart"></i>
+           
             <div class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count" id="cart-count">0</span>
@@ -305,9 +304,9 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             <div class="footer-column">
                 <h3>USEFUL LINKS</h3>
                 <ul>
-                    <li><a href="#">Returns</a></li>
+                    <li><a href="Returns-policy.html">Returns</a></li>
                     <li><a href="#">Size guide</a></li>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="Terms&Conditions.html">FAQs</a></li>
                 </ul>
             </div>
 
@@ -329,6 +328,6 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             </div>
         </div>
     </footer>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/acceuil.js"></script>
 </body>
 </html>
