--- a/Men's.html
+++ b/Men's.html
@@ -310,7 +310,7 @@
             <h2 id="modal-name"></h2>
             <p id="modal-description" class="modal-description"></p>
             <div id="modal-price" class="modal-price"></div>
-            <button id="modal-add-to-cart" class="add-to-cart">Ajouter au panier</button>
+            <button id="modal-add-to-cart" class="add-to-cart">Add to Cart</button>
         </div>
     </div>
 </div>
@@ -333,7 +333,7 @@
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="Terms&Conditions.html">Returns</a></li>
+                <li><a href="Returns-policy.html">Returns</a></li>
                 <li><a href="#">Size guide</a></li>
                 <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
