--- a/panier.html
+++ b/panier.html
@@ -91,12 +91,12 @@
     </header>
     
     <div class="main-content">
-        <h1 class="cart-title">Votre Panier</h1>
+        <h1 class="cart-title">Your Cart</h1>
         <div id="cart-items-container"></div>
         <div id="total-price">Total : 0 €</div>
     </div>
 
-    <button id="checkout-button">Passer à la caisse</button>
+    <button id="checkout-button">Make the payment</button>
     
 
     <footer>
@@ -115,7 +115,7 @@
             <div class="footer-column">
                 <h3>USEFUL LINKS</h3>
                 <ul>
-                    <li><a href="#">Returns</a></li>
+                    <li><a href="Returns-policy.html">Returns</a></li>
                     <li><a href="#">Size guide</a></li>
                     <li><a href="#">FAQs</a></li>
                 </ul>
