--- a/trending.html
+++ b/trending.html
@@ -231,7 +231,7 @@
         </div>
         <div class="products-card">
             <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
-            <div class="product-name">product name</div>
+            <div class="product-name">product name 56</div>
             <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">79.99€</div>
             <button class="add-to-cart">Add To Cart</button>
@@ -262,9 +262,9 @@
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="#">Returns</a></li>
+                <li><a href="Returns-policy.html">Returns</a></li>
                 <li><a href="#">Size guide</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
         </div>
 
