--- a/kids.html
+++ b/kids.html
@@ -282,7 +282,7 @@
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="Terms&Conditions.html">Returns</a></li>
+                <li><a href="Returns-policy.html">Returns</a></li>
                 <li><a href="#">Size guide</a></li>
                 <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
