--- a/women.html
+++ b/women.html
@@ -560,9 +560,9 @@
             <div class="footer-column">
                 <h3>USEFUL LINKS</h3>
                 <ul>
-                    <li><a href="#">Returns</a></li>
+                    <li><a href="Returns-policy.html">Returns</a></li>
                     <li><a href="#">Size guide</a></li>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="Terms&Conditions.html">FAQs</a></li>
                 </ul>
             </div>
 
