add size guide page

--- a/panier.html
+++ b/panier.html
@@ -77,7 +77,8 @@
                     <ul class="dropdown">
                        
                         <li><a href="about.html">About-Us</a></li>
-                        
+                         <li><a href="Returns-policy.html">Returns Policy</a></li>
+                        <li><a href="size-guide.html">Size Guide</a></li>
                         <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                     </ul>
                 </li>
