--- a/women.html
+++ b/women.html
@@ -83,6 +83,8 @@
                     <ul class="dropdown">
                        
                         <li><a href="about.html">About-Us</a></li>
+                         <li><a href="Returns-policy.html">Returns Policy</a></li>
+                        <li><a href="size-guide.html">Size Guide</a></li>
                         <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                     </ul>
                 </li>
@@ -561,7 +563,7 @@
                 <h3>USEFUL LINKS</h3>
                 <ul>
                     <li><a href="Returns-policy.html">Returns</a></li>
-                    <li><a href="#">Size guide</a></li>
+                    <li><a href="size-guide.html">Size guide</a></li>
                     <li><a href="Terms&Conditions.html">FAQs</a></li>
                 </ul>
             </div>
