--- a/Returns-policy.html
+++ b/Returns-policy.html
@@ -84,7 +84,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <ul class="dropdown">
                        
                         <li><a href="about.html">About-Us</a></li>
-                        
+                         <li><a href="Returns-policy.html">Returns Policy</a></li>
+                        <li><a href="size-guide.html">Size Guide</a></li>
                         <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                     </ul>
                 </li>
