--- a/about.html
+++ b/about.html
@@ -94,7 +94,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <ul class="dropdown">
                    
                     <li><a href="about.html">About-Us</a></li>
-                    
+                    <li><a href="Returns-policy.html">Returns Policy</a></li>
+                    <li><a href="size-guide.html">Size Guide</a></li>
                     <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                 </ul>
             </li>
@@ -181,9 +182,9 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="#">Returns</a></li>
-                <li><a href="#">Size guide</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="Returns-policy.html">Returns</a></li>
+                <li><a href="size-guide.html">Size guide</a></li>
+                <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
         </div>
 
