--- a/kids.html
+++ b/kids.html
@@ -84,7 +84,8 @@
                 <ul class="dropdown">
                    
                     <li><a href="about.html">About-Us</a></li>
-                    
+                     <li><a href="Returns-policy.html">Returns Policy</a></li>
+                    <li><a href="size-guide.html">Size Guide</a></li>
                     <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                 </ul>
             </li>
@@ -208,18 +209,21 @@
                 <div class="product-name">product name 233</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/kids (2).jpg" alt="Produit 2" class="products-image">
                 <div class="product-name">product name12</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
+                <button class="add-to-cart">Details</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/kids (2).png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name 763</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
+                <button class="add-to-cart">Details</button>
             </div>
         </div>
     </div>
@@ -283,7 +287,7 @@
             <h3>USEFUL LINKS</h3>
             <ul>
                 <li><a href="Returns-policy.html">Returns</a></li>
-                <li><a href="#">Size guide</a></li>
+                <li><a href="size-guide.html">Size guide</a></li>
                 <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
         </div>
