ajout des tailles en lettre

--- a/Returns-policy.html
+++ b/Returns-policy.html
@@ -211,7 +211,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <div class="cta-container">
         <h2>Need Help with Your Return?</h2>
         <p>Our customer service team is here to assist you with any questions regarding returns.</p>
-        <a href="#" class="btn">Contact Customer Service</a>
+        <a href="contact.html" class="btn">Contact Customer Service</a>
     </div>
 </div>
 
